# waas

./: .editorconfig  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  security_vulnerability.yml
.github/workflows/: ci.yml  release.yml  sdk-generation.yml  security.yml
backend/: .air.analytics.toml  .air.delivery.toml  .air.toml  .env.example  .gitignore  .golangci.yml  ARCHITECTURE.md  CONTRIBUTING.md  CONTRIBUTING_QUICK.md  Dockerfile.analytics  Dockerfile.analytics.prod  Dockerfile.api  Dockerfile.api.prod  Dockerfile.delivery  Dockerfile.delivery.prod  Dockerfile.quickstart  Dockerfile.test  Makefile  Makefile.prod  Makefile.test  README.md  docker-compose.observability.yml  docker-compose.prod.yml  docker-compose.quickstart.yml  docker-compose.test.yml  docker-compose.yml  go.mod  go.sum
backend/docker/: Dockerfile.api  Dockerfile.api.prod  README.md
backend/docs/: ERROR_CATALOG.md  FEATURE_MATRIX.md  QUICK_REFERENCE.md  README.md  TESTING.md  TROUBLESHOOTING.md  api_test.go  deployment-guide.md  docs.go  observability-guide.md  swagger.json  swagger.yaml  testing_tools.md
backend/examples/: testing_tools_demo.go
backend/k8s/: README.md  analytics-service.yaml  api-service.yaml  backup-cronjob.yaml  configmap.yaml  delivery-engine.yaml  ingress.yaml  logging.yaml  migration-job.yaml  monitoring.yaml  namespace.yaml  postgres.yaml  redis.yaml  secrets.yaml
backend/migrations/: 000001_create_tenants_table.up.sql  000002_create_webhook_endpoints_table.up.sql  000003_create_delivery_attempts_table.down.sql  000003_create_delivery_attempts_table.up.sql  (+195 more)
backend/pkg/: README.md
backend/sdk/django/: README.md  pyproject.toml
backend/sdk/django/waas_django/: __init__.py  client.py  decorators.py  middleware.py  verify.py
backend/sdk/python/: README.md  pyproject.toml
backend/sdk/python/examples/: basic_usage.py
backend/sdk/python/tests/: test_client.py  test_integration.py
backend/sdk/python/waas_sdk/: __init__.py  client.py  exceptions.py  models.py  verify.py
deploy/: README.md
(+1464 files in other folders)
