[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "waas-django"
version = "1.0.0"
description = "Drop-in WaaS webhook integration for Django"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "django>=4.2",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-django", "pytest-asyncio"]
